--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,15 @@
 {
-    "require-dev": {
-        "phpunit/phpunit": "^10.4"
-    },
     "autoload": {
         "psr-4": {
             "App\\": "src/"
+        }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^10.4"
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
         }
     }
 }
